--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,1 +1,10 @@
-{{outlet}}
+<div class="jumbotron">
+  <h2>{{model.content}}</h2>
+  <p><small>by {{model.author}}</small></p>
+  <hr>
+  <p><small>Notes {{model.notes}}</small></p>
+  <div class="alert alert-info" role="alert">
+    <p>xxx</p>
+  </div>
+  {{new-answer-tile}}
+</div>
