--- a/app/templates/components/new-answer-tile.hbs
+++ b/app/templates/components/new-answer-tile.hbs
@@ -1,8 +1,8 @@
 <div class="container">
-  <form class="form-horizontal" role="form">
+  <form role="form">
     <div class="form-group">
-      <label for="answer_content">Question</label>
-      {{input value=content id="answer_content" class="form-control"}}
+      <label for="answer_content">Answer</label>
+      {{textarea value=content id="answer_content" class="form-control"}}
     </div>
     <div class="form-group">
       <label for="author">Author</label>
