--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,4 +1,5 @@
 <div class="jumbotron">
+  {{update-question-tile question=model update="update"}}
   <h2>{{model.content}}</h2>
   <p><small>by {{model.author}}</small></p>
   <hr>
